AUTOMAKE_OPTIONS = foreign

include_HEADERS=rtpsession.h rtp.h ortp.h rtcp.h ortp_srtp.h

# include_HEADERS=str_utils.h rtpsession.h rtp.h port.h logging.h \
#                 ortp.h telephonyevents.h sessionset.h payloadtype.h \
#                 rtpprofile.h rtpsignaltable.h rtcp.h event.h \
#                 stun.h stun_udp.h ortp_srtp.h zrtp.h b64.h
